common/force-app/main/default/objects/LearningLog__c/LearningLog__c.object-meta.xml
<CustomObject>
    <label>학습일지</label>
    <nameField>
        <displayFormat>학습일지-{0000}</displayFormat>
        <label>학습일지 이름</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>학습일지</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>