common/force-app/main/default/objects/LearningLog__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>아동ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>학습일지들</relationshipLabel>
    <relationshipName>LearningLogContactName</relationshipName>
    <type>Lookup</type>
</CustomField>