common/force-app/main/default/objects/LearningLog__c/fields/CourseName__c.field-meta.xml
<CustomField>
    <fullName>CourseName__c</fullName>
    <label>과목명</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>국어</fullName>
            </value>
            <value>
                <fullName>수학</fullName>
            </value>
            <value>
                <fullName>영어</fullName>
            </value>
            <value>
                <fullName>과학</fullName>
            </value>
            <value>
                <fullName>한자</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>