common/force-app/main/default/objects/LearningLog__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>학습일정</label>
    <type>Date</type>
</CustomField>