common/force-app/main/default/objects/LearningLog__c/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>방문교사ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LearningLogOwnerIds</relationshipName>
    <type>Lookup</type>
</CustomField>