common/force-app/main/default/objects/LearningLog__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>과정명</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>학습일지들</relationshipLabel>
    <relationshipName>LearningLogProductName</relationshipName>
    <type>Lookup</type>
</CustomField>