common/force-app/main/default/objects/LearningLog__c/fields/SubscriptionId__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>구독내역</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>학습일지</relationshipLabel>
    <relationshipName>SubscriptionIds</relationshipName>
    <type>Lookup</type>
</CustomField>