common/force-app/main/default/objects/LearningLog__c/fields/TeacherComment__c.field-meta.xml
<CustomField>
    <fullName>TeacherComment__c</fullName>
    <label>교사 의견</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>